[package]
name = "quantleaf-query-sdk"
description = "Model definitions for Quantleaf Query"
version = "0.0.1-alpha.0"
edition = "2018"
authors = ["marcus-pousette <marcus.pousette@quantleaf.com>"]
license = "MIT"
homepage = "https://github.com/quantleaf/query-sdk-rs"
repository = "https://github.com/quantleaf/query-sdk-rs"
documentation = "https://github.com/quantleaf/query-sdk-rs"
readme = "README.md"
keywords = []
categories = []

[dependencies]
