[package]
name = "quantleaf-query-sdk"
description = "Model definitions for Quantleaf Query"
version = "0.0.1-alpha.10"
edition = "2018"
authors = ["marcus-pousette <marcus.pousette@quantleaf.com>"]
license = "MIT"
homepage = "https://github.com/quantleaf/query-sdk-rs"
repository = "https://github.com/quantleaf/query-sdk-rs"
documentation = "https://github.com/quantleaf/query-sdk-rs"
readme = "README.md"
keywords = []
categories = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"

[dev-dependencies]
actix-rt = "2.2.0"